--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -6,14 +6,24 @@
 <web-app>
   
   <!-- Servlets -->
-<servlet>
+	<servlet>
 		<servlet-name>repositoryClassLoader</servlet-name>
 		<servlet-class>sourceagile.server.classRepository.RepositoryClassImplementation</servlet-class>
+	</servlet>
+
+	<servlet>
+		<servlet-name>repositoryTestClassLoader</servlet-name>
+		<servlet-class>sourceagile.server.classRepository.repositoryTest.RepositoryClassTestImplementation</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>repositoryClassLoader</servlet-name>
 		<url-pattern>/sourceagile/repositoryClassLoader</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>repositoryTestClassLoader</servlet-name>
+		<url-pattern>/sourceagile/repositoryTestClassLoader</url-pattern>
 	</servlet-mapping>
   
   <!-- Default page to serve -->
