--- a/trunk/war/WEB-INF/web.xml
+++ b/trunk/war/WEB-INF/web.xml
@@ -7,8 +7,13 @@
   
   <!-- Servlets -->
 	<servlet>
-		<servlet-name>repositoryClassLoader</servlet-name>
-		<servlet-class>sourceagile.server.classRepositories.subversionClassRepository.RepositoryClassImplementation</servlet-class>
+		<servlet-name>subversionRepositoryClassLoader</servlet-name>
+		<servlet-class>sourceagile.server.classRepositories.subversionClassRepository.SubversionRepositoryClassImplementation</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>gitRepositoryClassLoader</servlet-name>
+		<servlet-class>sourceagile.server.classRepositories.gitClassRepository.GitRepositoryClassImplementation</servlet-class>
 	</servlet>
 
 	<servlet>
@@ -17,8 +22,13 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>repositoryClassLoader</servlet-name>
-		<url-pattern>/sourceagile/repositoryClassLoader</url-pattern>
+		<servlet-name>subversionRepositoryClassLoader</servlet-name>
+		<url-pattern>/sourceagile/subversionRepositoryClassLoader</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>gitRepositoryClassLoader</servlet-name>
+		<url-pattern>/sourceagile/gitRepositoryClassLoader</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
