--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -13,5 +13,11 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/javagit-0.1.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/helpAgile.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/ApprovalTests.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jdo-api-3.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.2.0-m3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-enhancer-2.1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/derby.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-rdbms-2.2.0-m3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/asm-3.3.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
