--- a/tags/Release_0.7_AppEngine/.classpath
+++ b/tags/Release_0.7_AppEngine/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/helpAgile.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/svnkit.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtext.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
