--- a/trunk/war/WEB-INF/web.xml
+++ b/trunk/war/WEB-INF/web.xml
@@ -41,6 +41,11 @@
 		<servlet-name>fileExporter</servlet-name>
 		<servlet-class>sourceagile.server.fileExporter.FileExporterImplementation</servlet-class>
 	</servlet>
+	
+<servlet>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <servlet-class>com.google.gwt.junit.server.JUnitHostImpl</servlet-class>
+</servlet>
 
 	<servlet-mapping>
 		<servlet-name>projectDatabaseAccess</servlet-name>
@@ -76,7 +81,46 @@
 		<servlet-name>fileExporter</servlet-name>
 		<url-pattern>/sourceagile/fileExporter</url-pattern>
 	</servlet-mapping>
+	
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile/junithost/*</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.authentication.Authentication/junithost/*</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.development.Development/junithost/*</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.planning.Planning/junithost/*</url-pattern>
+</servlet-mapping>
   
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.administration.Administration/junithost/*</url-pattern>
+</servlet-mapping>  
+
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.documentation.Documentation/junithost/*</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.metrics.Metrics/junithost/*</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/sourceagile.testing.Testing/junithost/*</url-pattern>
+</servlet-mapping>
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>LiveSourceHome.html</welcome-file>
